--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,12 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Photometric redshift estimation for emission line galaxies by Multi-modal Algorithm"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, CA, USA"
+permalink: /talks/2025-11-02-talk-v1
+venue: "2025 ANNUAL MEETING OF THE CHINESE ASTRONOMICAL SOCIEty"
+date: 2025-11-02
+location: "Xiamen, Fujian, China"
+slidesurl: 'https://academicpages.github.io/files/2025-annual-meeting-of-the-Chinese-Astronomical-Society.pdf'
 ---
 
-This is a description of your talk, which is a markdown file that can be all markdown-ified like any other post. Yay markdown!
+
